--- a/index.html
+++ b/index.html
@@ -22,25 +22,28 @@
     <!--Шапка-->
 
     <header>
-      <div class="container">
-        <nav>
-          <a href="./index.html" class="nav-link-logo"
-            ><span class="logo">Web</span>Studio</a
-          >
+      <div class="container main-nav">
+        <a href="./index.html" class="nav-link-logo"
+          ><span class="logo">Web</span>Studio</a
+        >
 
-          <ul class="site-nav">
-            <li><a href="./index.html" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="/" class="link">Контакты</a></li>
-          </ul>
-        </nav>
-        <ul class="auth-nav">
-          <li>
+        <ul class="site-nav ul">
+          <li class="item">
+            <a href="./index.html" class="link current">Студия</a>
+          </li>
+          <li class="item">
+            <a href="./portfolio.html" class="link">Портфолио</a>
+          </li>
+          <li class="item"><a href="/" class="link">Контакты</a></li>
+        </ul>
+
+        <ul class="auth-nav ul">
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -56,37 +59,39 @@
 
       <section class="section-advant">
         <div class="container">
-          <h2 class="advant-title"></h2>
-          <ul>
-            <li>
-              <h3 class="advant-title">Внимание к деталям</h3>
-              <p class="section-text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
-            </li>
-            <li>
-              <h3 class="advant-title">Пунктуальность</h3>
-              <p class="section-text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
-            </li>
-            <li>
-              <h3 class="advant-title">Планирование</h3>
-              <p class="section-text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
-            </li>
-            <li>
-              <h3 class="advant-title">Современные технологии</h3>
-              <p class="section-text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
-            </li>
-          </ul>
+          <h2 class="vizually-hidden"></h2>
+          <div class="main-nav">
+            <ul class="main-item ul">
+              <li class="item">
+                <h3 class="advant-title">Внимание к деталям</h3>
+                <p class="section-text">
+                  Идейные соображения, а также начало повседневной работы по
+                  формированию позиции.
+                </p>
+              </li>
+              <li class="item">
+                <h3 class="advant-title">Пунктуальность</h3>
+                <p class="section-text">
+                  Задача организации, в особенности же рамки и место обучения
+                  кадров влечет за собой.
+                </p>
+              </li>
+              <li class="item">
+                <h3 class="advant-title">Планирование</h3>
+                <p class="section-text">
+                  Равным образом консультация с широким активом в значительной
+                  степени обуславливает.
+                </p>
+              </li>
+              <li class="item">
+                <h3 class="advant-title">Современные технологии</h3>
+                <p class="section-text">
+                  Значимость этих проблем настолько очевидна, что реализация
+                  плановых заданий.
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
@@ -95,7 +100,7 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title desc">Чем мы занимаемся</h2>
-          <ul>
+          <ul class="link-flex ul">
             <li>
               <a href=""
                 ><img
@@ -133,8 +138,8 @@
         <div class="container">
           <h2 class="section-title desc">Наша команда</h2>
 
-          <ul>
-            <li>
+          <ul class="command-flex ul">
+            <li class="flex">
               <img
                 class="img"
                 src="./images/img.jpg"
@@ -145,7 +150,7 @@
               <h3 class="section-title section-name">Игорь Демьяненко</h3>
               <p class="section-text section-work">Product Designer</p>
             </li>
-            <li>
+            <li class="flex">
               <img
                 class="img"
                 src="./images/img(1).jpg"
@@ -156,7 +161,7 @@
               <h3 class="section-title section-name">Ольга Репина</h3>
               <p class="section-text section-work">Frontend Developer</p>
             </li>
-            <li>
+            <li class="flex">
               <img
                 class="img"
                 src="./images/img(2).jpg"
@@ -167,7 +172,7 @@
               <h3 class="section-title section-name">Николай Тарасов</h3>
               <p class="section-text section-work">Marketing</p>
             </li>
-            <li>
+            <li class="flex">
               <img
                 class="img"
                 src="./images/img(3).jpg"
@@ -190,13 +195,16 @@
         <a href="./index.html" class="nav-link-logo footer"
           ><span class="logo">Web</span>Studio</a
         >
-        <address class="address">
+
+        <address class="address footer-flex">
           <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
           <a href="mailto:info@example.com" class="footer-link"
             >info@example.com</a
           >
-          <br />
-          <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
+
+          <a href="tel:+380991111111" class="footer-link c"
+            >+38 099 111 11 11</a
+          >
         </address>
       </div>
     </footer>
