--- a/portfolio.html
+++ b/portfolio.html
@@ -23,27 +23,28 @@
     <!--Шапка-->
 
     <header>
-      <div class="container">
-        <nav>
-          <a href="./index.html" class="nav-link-logo"
-            ><span class="logo">Web</span>Studio</a
-          >
+      <div class="container main-nav">
+        <a href="./index.html" class="nav-link-logo"
+          ><span class="logo">Web</span>Studio</a
+        >
 
-          <ul class="site-nav">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li>
-              <a href="./portfolio.html" class="link current">Портфолио</a>
-            </li>
-            <li><a href="/" class="link">Контакты</a></li>
-          </ul>
-        </nav>
-        <ul class="auth-nav">
-          <li>
+        <ul class="site-nav ul">
+          <li class="item">
+            <a href="./index.html" class="link">Студия</a>
+          </li>
+          <li class="item">
+            <a href="./portfolio.html" class="link current">Портфолио</a>
+          </li>
+          <li class="item"><a href="/" class="link">Контакты</a></li>
+        </ul>
+
+        <ul class="auth-nav ul">
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -55,22 +56,35 @@
 
       <section class="section-workcin">
         <div class="container">
-          <h1 class="display">Наши работы</h1>
+          <h1 class="vizually-hidden">Наши работы</h1>
 
-          <ul class="nav-button">
-            <li><button type="button" class="button">Все</button></li>
-            <li><button type="button" class="button">Веб-сайты</button></li>
-            <li><button type="button" class="button">Приложения</button></li>
-            <li><button type="button" class="button">Дизайн</button></li>
-            <li><button type="button" class="button">Маркетинг</button></li>
-          </ul>
+          <div class="btn-flex">
+            <ul class="nav-button ul">
+              <li class="btn-flex">
+                <button type="button" class="button">Все</button>
+              </li>
+              <li class="btn-flex">
+                <button type="button" class="button">Веб-сайты</button>
+              </li>
+              <li class="btn-flex">
+                <button type="button" class="button">Приложения</button>
+              </li>
+              <li class="btn-flex">
+                <button type="button" class="button">Дизайн</button>
+              </li>
+              <li class="btn-flex">
+                <button type="button" class="button">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
 
           <!-- Наши работы -->
 
-          <ul>
-            <li>
+          <ul class="pic-box ul">
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/Tehnokryak.png"
                   alt="Ноутбук на экране фото людей"
                   width="370"
@@ -80,9 +94,10 @@
                 <p class="section-text work">Веб-сайт</p>
               </a>
             </li>
-            <li>
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/NewOrleanvsGoldenStar.png"
                   alt="Баскетболисты"
                   width="370"
@@ -92,9 +107,10 @@
                 <p class="section-text work">Дизайн</p>
               </a>
             </li>
-            <li>
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/Seafood.png"
                   alt="Название ресторана"
                   width="370"
@@ -104,9 +120,10 @@
                 <p class="section-text work">Приложение</p>
               </a>
             </li>
-            <li>
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/Prime.png"
                   alt="Наушники"
                   width="370"
@@ -116,9 +133,10 @@
                 <p class="section-text work">Маркетинг</p>
               </a>
             </li>
-            <li>
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/Boxes.png"
                   alt="Картонные коробки"
                   width="370"
@@ -128,9 +146,10 @@
                 <p class="section-text work">Приложение</p>
               </a>
             </li>
-            <li>
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/InspirationhasnoBorders.png"
                   alt="Ноутбук на экране фото людей"
                   width="370"
@@ -140,9 +159,10 @@
                 <p class="section-text work">Веб-сайт</p>
               </a>
             </li>
-            <li>
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/LimitedEdition.png"
                   alt="Раскрытая книга"
                   width="370"
@@ -152,9 +172,10 @@
                 <p class="section-text work">Дизайн</p>
               </a>
             </li>
-            <li>
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/LAB.png"
                   alt="Бирка на нитке"
                   width="370"
@@ -164,9 +185,10 @@
                 <p class="section-text work">Маркетинг</p>
               </a>
             </li>
-            <li>
+            <li class="pic-flex">
               <a href=""
                 ><img
+                  class="pic"
                   src="./images/GrowingBusiness.png"
                   alt="Человек работает на ноутбуке"
                   width="370"
@@ -188,13 +210,16 @@
         <a href="./index.html" class="nav-link-logo footer"
           ><span class="logo">Web</span>Studio</a
         >
-        <address class="address">
+
+        <address class="address footer-flex">
           <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
           <a href="mailto:info@example.com" class="footer-link"
             >info@example.com</a
           >
-          <br />
-          <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
+
+          <a href="tel:+380991111111" class="footer-link address-link"
+            >+38 099 111 11 11</a
+          >
         </address>
       </div>
     </footer>
