--- a/portfolio.html
+++ b/portfolio.html
@@ -90,8 +90,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Технокряк</h3>
-                <p class="section-text work">Веб-сайт</p>
+                <div class="cards">
+                  <h3 class="section-title">Технокряк</h3>
+                  <p class="section-text work">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="pic-flex">
@@ -103,8 +105,12 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Постер New Orlean vs Golden Star</h3>
-                <p class="section-text work">Дизайн</p>
+                <div class="cards">
+                  <h3 class="section-title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="section-text work">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="pic-flex">
@@ -116,8 +122,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Ресторан Seafood</h3>
-                <p class="section-text work">Приложение</p>
+                <div class="cards">
+                  <h3 class="section-title">Ресторан Seafood</h3>
+                  <p class="section-text work">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="pic-flex">
@@ -129,8 +137,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Проект Prime</h3>
-                <p class="section-text work">Маркетинг</p>
+                <div class="cards">
+                  <h3 class="section-title">Проект Prime</h3>
+                  <p class="section-text work">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="pic-flex">
@@ -142,8 +152,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Проект Boxes</h3>
-                <p class="section-text work">Приложение</p>
+                <div class="cards">
+                  <h3 class="section-title">Проект Boxes</h3>
+                  <p class="section-text work">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="pic-flex">
@@ -155,8 +167,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Inspiration has no Borders</h3>
-                <p class="section-text work">Веб-сайт</p>
+                <div class="cards">
+                  <h3 class="section-title">Inspiration has no Borders</h3>
+                  <p class="section-text work">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="pic-flex">
@@ -168,8 +182,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Издание Limited Edition</h3>
-                <p class="section-text work">Дизайн</p>
+                <div class="cards">
+                  <h3 class="section-title">Издание Limited Edition</h3>
+                  <p class="section-text work">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="pic-flex">
@@ -181,8 +197,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Проект LAB</h3>
-                <p class="section-text work">Маркетинг</p>
+                <div class="cards">
+                  <h3 class="section-title">Проект LAB</h3>
+                  <p class="section-text work">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="pic-flex">
@@ -194,8 +212,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="section-title">Growing Business</h3>
-                <p class="section-text work">Приложение</p>
+                <div class="cards">
+                  <h3 class="section-title">Growing Business</h3>
+                  <p class="section-text work">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
