--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             >info@example.com</a
           >
 
-          <a href="tel:+380991111111" class="footer-link c"
+          <a href="tel:+380991111111" class="footer-link address-link"
             >+38 099 111 11 11</a
           >
         </address>
