--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения для<br />
+            вашего бизнеса
+          </h1>
+          <button class="hero-button">Заказать услугу</button>
+        </div>
       </section>
 
       <section class="section-advant">
@@ -101,7 +106,7 @@
         <div class="container">
           <h2 class="section-title desc">Чем мы занимаемся</h2>
           <ul class="link-flex ul">
-            <li>
+            <li class="item-link">
               <a href=""
                 ><img
                   src="./images/img.svg"
@@ -110,7 +115,7 @@
                   height="294"
               /></a>
             </li>
-            <li>
+            <li class="item-link">
               <a href=""
                 ><img
                   src="./images/img(1).svg"
@@ -119,7 +124,7 @@
                   height="294"
               /></a>
             </li>
-            <li>
+            <li class="item-link">
               <a href=""
                 ><img
                   src="./images/img(2).svg"
@@ -147,8 +152,10 @@
                 width="270"
                 height="260"
               />
+              <!-- <div class="card"> -->
               <h3 class="section-title section-name">Игорь Демьяненко</h3>
               <p class="section-text section-work">Product Designer</p>
+              <!-- </div> -->
             </li>
             <li class="flex">
               <img
